syntax = "proto3";

package clockwork;

option go_package = ".";

message ClockInRequest {}

message ClockInResponse {}
