syntax = "proto3";

package clockwork;

import "protos/entities.proto";

option go_package = ".";

service ClockWorkService {
  rpc ClockIn(ClockInRequest) returns (ClockInResponse);
}
